--- a/index.html
+++ b/index.html
@@ -7,30 +7,20 @@
     <title>QR code generator</title>
   </head>
   <body>
-    <div class="box">
-      <div class="qr-header">
+    <div class="box_container">
+      <div class="qr_header">
         <h1>Generate QR Code</h1>
-        <input type="text" placeholder="Type your text or URL" id="qr-text" />
-        <div>
-          <label for="sizes">Select Size:</label>
-          <select id="sizes">
-            <option value="100">100x100</option>
-            <option value="200">200x200</option>
-            <option value="300">300x300</option>
-            <option value="400">400x400</option>
-            <option value="500">500x500</option>
-            <option value="600">600x600</option>
-            <option value="700">700x700</option>
-            <option value="800">800x800</option>
-            <option value="900">900x900</option>
-            <option value="1000">1000x1000</option>
-          </select>
-        </div>
+        <p>Paste a url or enter text to create QR code</p>
       </div>
-      <div class="qr-body"></div>
-      <div class="qr-footer">
-        <a href="" id="generateBtn">Generate</a>
-        <a href="" id="downloadBtn" download="QR_Code.png">Download</a>
+      <div class="form">
+        <input type="text" placeholder="Type your text or URL" />
+
+        <button class="generateBtn">Generate QR code</button>
+        <!-- <button id="downloadBtn" download="QR_Code.png">Download</button> -->
+      </div>
+
+      <div class="qr_code">
+        <img src="" alt="qr_code_img" />
       </div>
     </div>
 
